// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compilev2 compile "HTML: regular" 1`] = `
VFile {
  "contents": "# Root

<div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\" >
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
<a href=\\"foo.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>
foo body


</div>    
</div>

* * *

## Children

1. [Bar](bar.html)
2. [Foo](foo.html)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 compile "MD_DENDRON: regular" 1`] = `
VFile {
  "contents": "((ref:[[foo]]))

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 compile "MD_ENHANCED_PREVIEW: regular" 1`] = `
VFile {
  "contents": "# Root


<div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\" >
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
<a href=\\"foo.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>        

# Root

foo body

</div>    
</div>

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 compile "MD_REGULAR: regular" 1`] = `
VFile {
  "contents": "# Root

<div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\" >
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
<a href=\\"foo\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>
foo body


</div>    
</div>

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`legacy note ref compile "MD_DENDRON: BAD_REF" 1`] = `
VFile {
  "contents": "((foo))

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`legacy note ref compile "MD_DENDRON: BAD_REF" 2`] = `
VFile {
  "contents": "((foo))

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "HTML: WITH_ANCHOR" 1`] = `
VFile {
  "contents": "<h1 id=\\"foo\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#foo\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Foo</h1>
<h1 id=\\"foo-bar\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#foo-bar\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Foo Bar</h1>
<p></p><p></p><div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\">
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
  <a href=\\"/undefined/foo.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  <h2 id=\\"header2\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#header2\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Header2</h2>
<p>task2</p>
</div>    
  </div><p></p><p></p>
<hr>
<h2 id=\\"children\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#children\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Children</h2>
<ol>
<li><a href=\\"/undefined/foo.ch1.html\\">Ch1</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "HTML: WITH_ANCHOR" 2`] = `
VFile {
  "contents": "<h1 id=\\"foo\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#foo\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Foo</h1>
<h1 id=\\"foo-bar\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#foo-bar\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Foo Bar</h1>
<p></p><p></p><div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\">
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
  <a href=\\"/undefined/foo.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  <h2 id=\\"header2\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#header2\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Header2</h2>
<p>task2</p>
</div>    
  </div><p></p><p></p>
<hr>
<h2 id=\\"children\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#children\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Children</h2>
<ol>
<li><a href=\\"/undefined/foo.ch1.html\\">Ch1</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "HTML: WITH_NOTE_LINK_TITLE" 1`] = `
VFile {
  "contents": "<h1 id=\\"foo\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#foo\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Foo</h1>
<h1 id=\\"foo-bar\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#foo-bar\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Foo Bar</h1>
<p></p><p></p><div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\">
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Ch1</span></div>
  <a href=\\"/undefined/foo.ch1.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  <h2 id=\\"header2\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#header2\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Header2</h2>
<p>task2</p>
</div>    
  </div><p></p><p></p>
<hr>
<h2 id=\\"children\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#children\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Children</h2>
<ol>
<li><a href=\\"/undefined/foo.ch1.html\\">Ch1</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "HTML: XVAULT_CASE" 1`] = `
VFile {
  "contents": "# Root

<div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">two</span></div>
  <a href=\\"two.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  two content


</div>    
  </div>

* * *

## Children

1. [One](one.html)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "HTML: recursive" 1`] = `
VFile {
  "contents": "# Root

<div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
  <a href=\\"foo.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo.one</span></div>
  <a href=\\"foo.one.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  # Foo.One

<div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo.two</span></div>
  <a href=\\"foo.two.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  # Foo.Two

blah


</div>    
  </div>
Regular wikilink: 


</div>    
  </div>


</div>    
  </div>

* * *

## Children

1. [Foo](foo.html)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "HTML: regular" 1`] = `
VFile {
  "contents": "# Foo

<div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
  <a href=\\"foo.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  foo body


</div>    
  </div>

* * *

## Children

1. [Ch1](foo.ch1.html)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "HTML: wildcard" 1`] = `
VFile {
  "contents": "# Root

<div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">journal.2020.08.01</span></div>
  <a href=\\"journal.2020.08.01.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  journal1


</div>    
  </div><div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">journal.2020.08.02</span></div>
  <a href=\\"journal.2020.08.02.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  journal2


</div>    
  </div><div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">journal.2020.08.03</span></div>
  <a href=\\"journal.2020.08.03.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  journal3


</div>    
  </div>

* * *

## Children

1. [Journal](journal.html)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "MD_DENDRON: XVAULT_CASE" 1`] = `
VFile {
  "contents": "![[dendron://vault2/two]]

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "MD_DENDRON: recursive" 1`] = `
VFile {
  "contents": "![[foo]]

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "MD_DENDRON: regular" 1`] = `
VFile {
  "contents": "![[foo]]

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "MD_DENDRON: wildcard" 1`] = `
VFile {
  "contents": "![[journal.2020.08.*]]

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "MD_ENHANCED_PREVIEW: WITH_ANCHOR" 1`] = `
VFile {
  "contents": "# Foo

# Foo Bar


  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
  <a href=\\"foo.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>        
  
  ## Header2

task2
  
  </div>    
  </div>
  

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "MD_ENHANCED_PREVIEW: WITH_ANCHOR" 2`] = `
VFile {
  "contents": "# Foo

# Foo Bar


  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
  <a href=\\"foo.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>        
  
  ## Header2

task2
  
  </div>    
  </div>
  

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "MD_ENHANCED_PREVIEW: WITH_FM_TITLE": bond 1`] = `
VFile {
  "contents": "# Foo

# Foo Bar


  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
  <a href=\\"foo.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>        
  
  ## Header2

task2
  
  </div>    
  </div>
  

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "MD_ENHANCED_PREVIEW: WITH_NOTE_LINK_TITLE" 1`] = `
VFile {
  "contents": "# Foo

# Foo Bar


  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Ch1</span></div>
  <a href=\\"foo.ch1.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>        
  
  ## Header2

task2
  
  </div>    
  </div>
  

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "MD_ENHANCED_PREVIEW: XVAULT_CASE" 1`] = `
VFile {
  "contents": "# Root


  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">two</span></div>
  <a href=\\"two.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>        
  
  two content
  
  </div>    
  </div>
  

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "MD_ENHANCED_PREVIEW: recursive" 1`] = `
VFile {
  "contents": "# Root


  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
  <a href=\\"foo.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>        
  
  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo.one</span></div>
  <a href=\\"foo.one.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>        
  
  # Foo.One

  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo.two</span></div>
  <a href=\\"foo.two.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>        
  
  # Foo.Two

blah

  </div>    
  </div>
  
Regular wikilink: [foo.two](foo.two.md)
  
  </div>    
  </div>
  
  </div>    
  </div>
  

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "MD_ENHANCED_PREVIEW: regular" 1`] = `
VFile {
  "contents": "# Foo


  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
  <a href=\\"foo.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>        
  
  foo body
  
  </div>    
  </div>
  

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "MD_ENHANCED_PREVIEW: wildcard" 1`] = `
VFile {
  "contents": "# Root


  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">journal.2020.08.01</span></div>
  <a href=\\"journal.2020.08.01.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>        
  
  journal1
  
  </div>    
  </div>
  

  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">journal.2020.08.02</span></div>
  <a href=\\"journal.2020.08.02.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>        
  
  journal2
  
  </div>    
  </div>
  

  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">journal.2020.08.03</span></div>
  <a href=\\"journal.2020.08.03.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>        
  
  journal3
  
  </div>    
  </div>
  

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "MD_REGULAR: WITH_ANCHOR" 1`] = `
VFile {
  "contents": "# Foo

# Foo Bar

<div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
  <a href=\\"foo\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  ## Header2

task2


</div>    
  </div>

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "MD_REGULAR: WITH_ANCHOR" 2`] = `
VFile {
  "contents": "# Foo

# Foo Bar

<div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
  <a href=\\"foo\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  ## Header2

task2


</div>    
  </div>

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "MD_REGULAR: XVAULT_CASE" 1`] = `
VFile {
  "contents": "# Root

<div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">two</span></div>
  <a href=\\"two\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  two content


</div>    
  </div>

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "MD_REGULAR: recursive" 1`] = `
VFile {
  "contents": "# Root

<div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
  <a href=\\"foo\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
    <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo.one</span></div>
  <a href=\\"foo.one\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>        
  
  # Foo.One

  <div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo.two</span></div>
  <a href=\\"foo.two\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>        
  
  # Foo.Two

blah

  </div>    
  </div>
  
Regular wikilink: [foo.two](foo.two)
  
  </div>    
  </div>
  


</div>    
  </div>

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "MD_REGULAR: regular" 1`] = `
VFile {
  "contents": "# Foo

<div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
  <a href=\\"foo\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  foo body


</div>    
  </div>

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`noteRefV2 compile "MD_REGULAR: wildcard" 1`] = `
VFile {
  "contents": "# Root

<div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">journal.2020.08.01</span></div>
  <a href=\\"journal.2020.08.01\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  journal1


</div>    
  </div><div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">journal.2020.08.02</span></div>
  <a href=\\"journal.2020.08.02\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  journal2


</div>    
  </div><div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\" >
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">journal.2020.08.03</span></div>
  <a href=\\"journal.2020.08.03\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  journal3


</div>    
  </div>

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`parse doesn't parse inline code block: bond 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 22,
              "line": 1,
              "offset": 21,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "inlineCode",
          "value": "((ref: [[foo.md]]))",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 22,
          "line": 1,
          "offset": 21,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`parse init 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "data": Object {
            "alias": "ref: [[foo",
            "link": Object {
              "data": Object {
                "type": "file",
              },
              "from": Object {
                "fname": "foo",
              },
              "type": "ref",
            },
          },
          "position": Position {
            "end": Object {
              "column": 20,
              "line": 1,
              "offset": 19,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "refLink",
          "value": "ref: [[foo",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 20,
      "line": 1,
      "offset": 19,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`parse init with inject 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "data": Object {
            "alias": "ref: [[foo",
            "link": Object {
              "data": Object {
                "type": "file",
              },
              "from": Object {
                "fname": "foo",
              },
              "type": "ref",
            },
          },
          "position": Position {
            "end": Object {
              "column": 20,
              "line": 1,
              "offset": 19,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "refLink",
          "value": "ref: [[foo",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 20,
      "line": 1,
      "offset": 19,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`parse init with inject 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "error processing ref",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "root",
            },
          ],
          "type": "paragraph",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 20,
      "line": 1,
      "offset": 19,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
